--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
     <h3><%= link_to @author.username, user_path(@author) %></h3>
     <div class="card-description">
       <p><%= @post.content %></p>
-      <% if current_user %>
+      <% if @post.button_valid?(current_user) %>
         <p><%= link_to "Write a request to this Post", new_post_request_path(@post), class: "make btn btn-success" %></p>
         <% end %>
       <p><%= link_to 'Back to overview', posts_path %></p>
